--- a/templates/Deepak/find-first-six-term-of-the-sequence-details.html
+++ b/templates/Deepak/find-first-six-term-of-the-sequence-details.html
@@ -25,9 +25,9 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Meta Title, Description and Canonical URL Starts -->
-<title>Sum of Integers from {{aa}} to {{bb}} | {{aa}} to {{bb}} Integers Sum -RoundingCalculator.Guru </title>
+<title>Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 -RoundingCalculator.Guru </title>
 <meta name="description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers. " />
+    content=" Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 with the help of our detailed solution and understand the concept of the first six terms of this sequence. " />
 <link rel="canonical" href="{{request.build_absolute_uri}}">
 <!-- Meta Title, Description and Canonical URL ENDS -->
 
@@ -35,9 +35,9 @@
 <!--  FACEBOOK CONFIGURATION STARTS  -->
 <meta content="https://www.facebook.com/OnlineCalculator-Guru-131572098650589/" property="og:url" />
 <meta property="og:title"
-    content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+    content="Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 - RoundingCalculator.Guru " />
 <meta property="og:description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers." />
+    content=" Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 with the help of our detailed solution and understand the concept of the first six terms of this sequence." />
 <meta content="" property="og:site_name" />
 <meta content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" property="og:image" />
 <meta property="og:image:type" content="image/png" />
@@ -48,9 +48,9 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="https://twitter.com/onlinecalculator" />
 <meta name="twitter:title"
-    content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+    content="Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 - RoundingCalculator.Guru " />
 <meta name="twitter:description"
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers.  " />
+    content=" Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 with the help of our detailed solution and understand the concept of the first six terms of this sequence.  " />
 <meta name="twitter:image:src"
     content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property="twitter:image:height" content="435" />
@@ -58,10 +58,10 @@
 <!-- TWITTER CARD CONFIGURATION ENDS  -->
 <!--  LINKEDIN CONFIGURATION STARTS-->
 <tittle></tittle>
-<meta property='og:title' content="Sum of Integers Calculator | Sum of Integers Formula - RoundingCalculator.Guru " />
+<meta property='og:title' content="Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 - RoundingCalculator.Guru " />
 <meta property='og:image' content="https://onlinecalculator.guru/static/images/Chemistry/ohms-law-calculator.jpeg" />
 <meta property='og:description'
-    content=" Calculate the Sum of Integers from {{aa}} to {{bb}} i.e {{ans}} easily. Check the step-by-step explanation to compute the integer sum for the {{aa}} to {{bb}} natural numbers.  ." />
+    content=" Find the first six terms of the sequence: a1 = {{aa}}, an = {{bb}} • an - 1 with the help of our detailed solution and understand the concept of the first six terms of this sequence.  ." />
 <meta property='og:url' content="https://www.linkedin.com/in/onlinecalculator/" />
 <!-- end of linkedin CONFIGURATIONS ENDS -->
 <!-- OPEN GRAPH CONFIGURATION ENDS -->
@@ -223,15 +223,13 @@ display: none;
             <h1 class="h1">First Six Term Of The Sequence a<sub>1</sub>={{aa}}, a<sub>n</sub>={{bb}}a<sub>n-1</sub>?</h1>
 
         </div>
-        <p>Use the <a href="/find-first-six-term-of-the-sequence/">Find  the first 6th term of the given sequence Calculator Online</a> to find the first six term of the sequence a<sub>1</sub>={{aa}}, a<sub>n</sub>={{bb}}a<sub>n-1</sub>. Here you can check the detailed solution for the first six term of the sequence a<sub>1</sub>={{aa}}, a<sub>n</sub>={{bb}}a<sub>n-1</sub> which is {{ans.a1}}, {{ans.a2}}, {{ans.a3}}, {{ans.a4}}, {{ans.a5}}, and {{ans.a6}}.
-        </p>
-
+        <p>With our help calculator tool, get to learn how to <a href="/find-first-six-term-of-the-sequence/">Find  the first 6th term of the given sequence Calculator Online</a> a1 = 1, an = 4 • an - 1 are. Keep reading and find a detailed solution on how to calculate the terms of this sequence with ease. The end result of first six terms of the sequence. a1 = {{aa}}, an = {{bb}} • an - 1 is {{ans.a1}}, {{ans.a2}}, {{ans.a3}}, {{ans.a4}}, {{ans.a5}}, and {{ans.a6}}.</p>
+       
         <div class="card-body">
 
 
             <form action="" method="POST" id="my_form">
                 {% csrf_token %}
-                <h5><span>First 6th term of the below sequence :<br></span></h5>
                 <!-- <div style="justify-content:center; text-align: center;">
                     
                         <label style="font-weight: 400;"><strong>a<sub>1</sub> = </strong></label> 
@@ -320,13 +318,12 @@ display: none;
 
         <div class="card" id="magnetic-Change in temperature">
             <div class="card-header">
-                <h2 class="h2">Find the first six terms of the sequence: a<sub>1</sub> = {{aa}}, a<sub>n</sub> = {{bb}} • a<sub>n - 1</sub></h2>
+                <h2>Method to Find the first six terms of the sequence: a<sub>1</sub> = {{aa}}, a<sub>n</sub> = {{bb}} • a<sub>n-1</sub></h2>
             </div>
 
 
             <div class="card-body">
             <p>With our help calculator tool, get to learn how to find the first six terms of the sequence a<sub>1</sub> = {{aa}}, a<sub>n</sub> = {{bb}} • a<sub>n-1</sub> are. Keep reading and find a detailed solution on how to calculate the terms of this sequence with ease. The end result of first six terms of the sequence. a<sub>1</sub> = {{aa}}, a<sub>n</sub> = {{bb}} • a<sub>n-1</sub> are {{ans.a1}}, {{ans.a2}}, {{ans.a3}}, {{ans.a4}}, {{ans.a5}}, and {{ans.a6}}.</p>
-            <h3>Method to Find the first six terms of the sequence: a<sub>1</sub> = {{aa}}, a<sub>n</sub> = {{bb}} • a<sub>n-1</sub></h3>
             <p>We know that the first term of this sequence is {{aa}}. In this case, n was equal to 1. </p>
             <br>
             <p>So, we can calculate the second term by plugging in 2 as n into the term equation.</p>
