--- a/templates/Deepak/term-of-arithmetic-sequence-calculator-details.html
+++ b/templates/Deepak/term-of-arithmetic-sequence-calculator-details.html
@@ -238,7 +238,7 @@
                 arithmetic sequence where a<sub>1</sub> = {{bb}} and a<sub>{{yy}}</sub> = {{cc}} by using <a
                     href="/term-of-arithmetic-sequence-calculator/">sum of the arithmetic sequence calculator</a>.</p>
 
-            <form action="" method="POST" id="my_form">
+            <form action="/term-of-arithmetic-sequence-calculator/" method="POST" id="my_form">
                 {% csrf_token %}
 
                 <div class="form-floating mb-3">
@@ -278,7 +278,7 @@
                 </div>
             </form> <br>
 
-             <p>Examples of Sum of arithmetic sequence upto N terms </p> <br>
+             <p>Examples of Sum of arithmetic sequence upto N terms </p> 
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -287,25 +287,26 @@
 
                             <li>
                                 <a href="/what-is-the-{{a}}-term-of-the-arithmetic-sequence-where-a1-{{b}}-and-a{{c}}-{{d}}/">
-                                    What is the {{a}} term of the arithmetic sequence where a<sub>1</sub> = {{b}} 
+                                    Find the {{a}} term of arithmetic sequence where <br> a<sub>1</sub> = {{b}} 
                                     and a<sub>{{c}}</sub> = {{d}}
                                 </a>
                             </li>
                             {%endfor%}
                         </ul>
                     </div>
-                    <!-- <div class="col">
+                    <div class="col">
                         <ul>
-                            {% for a in randList2 %}
+                            {% for a,b,c,d in dict1%}
 
                             <li>
-                                <a href="/how-to-convert-{{a}}-to-binary/">
-                                    What is {{a}} to Binary
+                                <a href="/what-is-the-{{a}}-term-of-the-arithmetic-sequence-where-a1-{{b}}-and-a{{c}}-{{d}}/">
+                                    Find the {{a}} term of arithmetic sequence where <br> a<sub>1</sub> = {{b}} 
+                                    and a<sub>{{c}}</sub> = {{d}}
                                 </a>
                             </li>
                             {%endfor%}
                         </ul>
-                    </div> -->
+                    </div>
                 </div>
 
 
