--- a/templates/Deepak/term-of-arithmetic-sequence-calculator.html
+++ b/templates/Deepak/term-of-arithmetic-sequence-calculator.html
@@ -103,12 +103,12 @@
                     <div class="">
                     <p>where, <span style="font-size: 20px;"><b>a</b></span><sub>
                         <input name="xx" type="number" readonly id="xx" onkeypress="return isNumberKey(event)"
-                            required required step="1" min="1" class="xx" max="100" id="xx" {% if xx%} value="{{xx}}" {% else %}
+                            required required step="1" min="0" class="xx" max="100" id="xx" {% if xx%} value="{{xx}}" {% else %}
                             value="1" {% endif %} placeholder="" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                             maxlength="2" style="width: 50px;"></sub> <span style="font-size: 20px;"> = </span>
 
                             <input name="bb" type="number"  id="bb" onkeypress="return isNumberKey(event)"
-                            required required step="1" min="1" class="bb"  id="bb" {% if bb%} value="{{bb}}" {% else %}
+                            required required step="1" min="-9991" class="bb"  id="bb" {% if bb%} value="{{bb}}" {% else %}
                             value="30" {% endif %} placeholder="" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                             maxlength="4" style="width: 100px;">
                     </p>
@@ -119,7 +119,7 @@
                             maxlength="2" style="width: 50px;"></sub> <span style="font-size: 20px;"> = </span>
 
                             <input name="cc" type="number"  id="cc" onkeypress="return isNumberKey(event)"
-                            required required step="1" min="1" class="cc"  id="cc" {% if cc%} value="{{cc}}" {% else %}
+                            required required step="1" class="cc"  id="cc" {% if cc%} value="{{cc}}" {% else %}
                             value="102" {% endif %} placeholder="" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                             maxlength="4" style="width: 100px;">
                     </p>
